kubernetes-manifests/envs/prod/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarky
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/upstream-vhost: $host
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Headers: *";

spec:
  ingressClassName: nginx-public
  rules:
    - host: api.bookmarky.alix.lol
      http:
        paths:
          - backend:
              service:
                name: bookmarky-api
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api-bookmark.alix.lol
      secretName: api-bookmarky-alix-lol
